# kamdridi-site

./: echoes_label_config.json  echoes_label_modules.py  echoes_label_pipeline.py
EchoesEngine/: CMakeLists.txt  CMakePresets.json  README.md  RELEASE_MANIFEST.json  benchmark_report.json
EchoesEngine/app/: CMakeLists.txt  echoes_benchmark.cpp  main.cpp  standalone_ipc.cpp  standalone_processor.cpp
EchoesEngine/build-codex-check/: CMakeCache.txt
EchoesEngine/engine/: CMakeLists.txt
EchoesEngine/engine/include/EchoesEngine/: CoreAudioPipeline.h  Engine.h  NaturalnessScorer.h
EchoesEngine/engine/include/EchoesEngine/audio/: AudioBuffer.h  RingBuffer.h
EchoesEngine/engine/include/EchoesEngine/dsp/: BiquadFilter.h  Compressor.h  GainStage.h  MixBus.h  NoiseGate.h  SpatialEngine.h  VocalEQ.h
EchoesEngine/engine/include/EchoesEngine/emotional/: EmotionalCore.h
EchoesEngine/engine/include/EchoesEngine/neural/: AIVoiceProcessor.h  CrepeLight.h  OnnxVoiceProcessor.h  TensorRTEngine.h
EchoesEngine/engine/include/EchoesEngine/vst/: EchoesJUCEPlugin.h  EchoesVSTAdapter.h  IVSTPlugin.h
EchoesEngine/engine/src/: CoreAudioPipeline.cpp  Engine.cpp
EchoesEngine/plugin/: EchoesPluginProcessor.cpp
EchoesEngine/scripts/: build.bat
EchoesEngine_complete_UPDATED/kamdridi-site/: PRODUCTION_DEPLOY_CHECKLIST.md  _redirects  about.html  index.html  lore.html  media.html  netlify.toml  package.json  robots.txt  sitemap.xml  soundcloud.html  spotify.html  style.css  success.html  tiktok.html
EchoesEngine_complete_UPDATED/kamdridi-site/assets/: config.js
EchoesEngine_complete_UPDATED/kamdridi-site/assets/css/: index.css  platform-bar.css  site-enhancements.css
EchoesEngine_complete_UPDATED/kamdridi-site/assets/js/: index.js  site-core.js
EchoesEngine_complete_UPDATED/kamdridi-site/merch/: index.html
EchoesEngine_complete_UPDATED/kamdridi-site/netlify/functions/: agent-status.js  orchestrator-cycle.js  stripe-webhook.js  task-intake.js
EchoesEngine_complete_UPDATED/kamdridi-site/netlify/functions/_lib/: supabase-admin.js
EchoesEngine_complete_UPDATED/kamdridi-site/photos/: index.html
EchoesEngine_complete_UPDATED/kamdridi-site/press/: index.html
EchoesEngine_complete_UPDATED/kamdridi-site/spotify/: index.html
EchoesEngine_complete_UPDATED/kamdridi-site/youtube/: index.html
band-site/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
band-site/app/: globals.css  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
band-site/app/api/checkout/: route.ts
band-site/app/api/contact/: route.ts
band-site/app/api/fan-club/content/: route.ts
band-site/app/api/fan-club/login/: route.ts
band-site/app/api/fan-club/session/: route.ts
band-site/app/api/fan-club/signup/: route.ts
band-site/app/api/store/tracking/: route.ts
band-site/app/api/stripe/webhook/: route.ts
band-site/app/api/tour/: route.ts
band-site/app/band/: page.tsx
band-site/app/contact/: page.tsx
band-site/app/fan-club/: page.tsx
band-site/app/games/: page.tsx
band-site/app/media/: page.tsx
band-site/app/music/: page.tsx
band-site/app/news/: page.tsx
band-site/app/store/: page.tsx
band-site/app/tour/: page.tsx
band-site/app/visual-album/: page.tsx
band-site/app/who-is-kam-dridi/: page.tsx
band-site/components/: cart-drawer.tsx  comic-reader.tsx  contact-form.tsx  fan-club.tsx  first-knight-easter-egg.tsx  games-panel.tsx  music-hub.tsx  providers.tsx  site-shell.tsx  storefront.tsx  ui.tsx
band-site/data/: site.ts  store.ts
band-site/lib/: printful.ts  session.ts  storage.ts  stripe.ts  utils.ts
kamdridi-site/: MULTI_AGENT_SYSTEM.md  artifact.html  booking.html  bundle.html  instagram.html  listen.html  manifesto.html  membership.html  merch.html  merch.js  phase2.js  photos.html  press.html  presskit.html  vault.html  x.html  youtube.html
kamdridi-site/assets/: apply-links.js  site-audit.js
kamdridi-site/assets/css/: style.css
kamdridi-site/assets/js/: store-catalog.js  supabase-client.js
kamdridi-site/booking/: index.html
kamdridi-site/instagram/: index.html
kamdridi-site/listen/: index.html
kamdridi-site/media/: index.html
kamdridi-site/netlify/functions/: agent-reset.js  create-checkout-session.js  get-supabase-config.js
kamdridi-site/netlify/functions/_lib/: agents.js
kamdridi-site/netlify/functions/lib/: agents.js  supabase-admin.js
kamdridi-site/ops/: agent-manifest.json
kamdridi-site/supabase/: multi-agent-system.sql  verify-agent-system.sql
tools/: optimize-kamdridi-index.mjs
